src/test/ui/nll/relate_tys/impl-fn-ignore-binder-via-bottom.stderr
error[E0599]: no function or associated item named `make_f` found for fn pointer `for<'r> fn(&'r ())` in the current scope
  --> $DIR/impl-fn-ignore-binder-via-bottom.rs:32:25
   |
LL |     let _x = <fn(&())>::make_f();
   |                         ^^^^^^ function or associated item not found in `for<'r> fn(&'r ())`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Y` defines an item `make_f`, perhaps you need to implement it
  --> $DIR/impl-fn-ignore-binder-via-bottom.rs:18:1
   |
LL | trait Y {
   | ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
